--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -1,9 +1,8 @@
 .fill {
+  font-family: $font-main;
   border: 0px;
   margin-top: 10px;
   padding-bottom: 30px;
-  font-family: $font-main;
-  color: $color-fontMain;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -14,33 +13,22 @@
   }
 
   &__title {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    text-transform: uppercase;
+    @include legendTitle;
 
     &--container {
       display: flex;
       justify-content: flex-start;
       align-items: center;
       .icon {
-        width: 21px;
-        height: 18px;
-        color: $color-icon;
+        @include legendIcon;
       }
       .word {
-        font-size: 1.125rem;
-        font-weight: 600;
-        margin-left: 8px;
+        @include legendlegendWord;
       }
     }
 
     &--arrow {
-      width: 16px;
-      height: 18px;
-      text-align: right;
+      @include legendArrow;
     }
   }
   &__label {
