Add mixins to form

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -23,6 +23,7 @@
   @content;
 }
 @mixin legendWord {
+  font-family: $font-main;
   font-weight: 600;
   font-size: 1.125rem;
   text-transform: uppercase;
