--- a/src/scss/layout/form/_design.scss
+++ b/src/scss/layout/form/_design.scss
@@ -8,99 +8,99 @@
   border-bottom: 1px solid $color-borderFooter;
   &__title {
     @include legendTitle;
-  }
-  &--container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    .icon {
-      @include legendIcon;
-    }
-    .word {
-      @include legendWord {
-    }
-  }
 
-  &--arrow {
+    &--container {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      .icon {
+        @include legendIcon;
+      }
+      .word {
+        @include legendWord;
+      }
+    }
+  }
+  .arrow {
     @include legendArrow;
   }
-}
 
-&__palette {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  &--colors {
-    font-size: 0.87rem;
-    font-weight: normal;
-    text-transform: uppercase;
-    margin: 22px 0 0 19px;
-  }
-
-  &--input {
+  &__palette {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-top: 20px;
+    justify-content: space-between;
+
+    &--colors {
+      font-size: 0.87rem;
+      font-weight: normal;
+      text-transform: uppercase;
+      margin: 22px 0 0 19px;
+    }
+
+    &--input {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-top: 20px;
+    }
+    &--list {
+      display: flex;
+      flex-direction: row;
+      margin-left: 4px;
+      color: transparent;
+    }
   }
-  &--list {
-    display: flex;
-    flex-direction: row;
-    margin-left: 4px;
-    color: transparent;
+  &__palette1 {
+    margin-top: 8px;
+    &--color1 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette1-color1;
+    }
+    &--color2 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette1-color2;
+    }
+    &--color3 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette1-color3;
+    }
   }
-}
-&__palette1 {
-  margin-top: 8px;
-  &--color1 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette1-color1;
+  &__palette2 {
+    &--color1 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette2-color1;
+    }
+    &--color2 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette2-color2;
+    }
+    &--color3 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette2-color3;
+    }
   }
-  &--color2 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette1-color2;
-  }
-  &--color3 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette1-color3;
-  }
-}
-&__palette2 {
-  &--color1 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette2-color1;
-  }
-  &--color2 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette2-color2;
-  }
-  &--color3 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette2-color3;
-  }
-}
-&__palette3 {
-  &--color1 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette3-color1;
-  }
-  &--color2 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette3-color2;
-  }
-  &--color3 {
-    width: 30px;
-    height: 25px;
-    background-color: $palette3-color3;
+  &__palette3 {
+    &--color1 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette3-color1;
+    }
+    &--color2 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette3-color2;
+    }
+    &--color3 {
+      width: 30px;
+      height: 25px;
+      background-color: $palette3-color3;
+    }
   }
 }
