--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -23,7 +23,7 @@
         @include legendIcon;
       }
       .word {
-        @include legendlegendWord;
+        @include legendWord;
       }
     }
 
