--- a/src/scss/pages/_card.scss
+++ b/src/scss/pages/_card.scss
@@ -1,10 +1,14 @@
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    background-color: $color-light;
-    @include tablet {
-        flex-direction: row-reverse;
-        background-image: linear-gradient(to bottom, $color-background, $color-light 9%);
-        padding: 24px 40px 20px 20px;
-    }
+  display: flex;
+  flex-direction: column;
+  background-color: $color-light;
+  @include tablet {
+    flex-direction: row-reverse;
+    background-image: linear-gradient(
+      to bottom,
+      $color-background,
+      $color-light 9%
+    );
+    padding: 0 40px 20px 20px;
+  }
 }
