--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,8 +1,15 @@
 <footer class="footer">
-  <small class="footer__small">
-    Awesome profile-cards @2018
-  </small>
-  <a  title="Ir a la página de Adalab" type="_blank" href="https://adalab.es/">
-    <img class="footer__logo" src="./assets/images/logo-adalab.png" alt="logo Adalab">
+  <small class="footer__small"> Awesome profile-cards @2018 </small>
+  <a
+    class="footer__link"
+    title="Ir a la página de Adalab"
+    type="_blank"
+    href="https://adalab.es/"
+  >
+    <img
+      class="footer__logo"
+      src="./assets/images/logo-adalab.png"
+      alt="logo Adalab"
+    />
   </a>
 </footer>
