--- a/src/scss/layout/_landing-main.scss
+++ b/src/scss/layout/_landing-main.scss
@@ -1,5 +1,3 @@
-//@include tablet {}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -9,12 +7,14 @@
   background-color: $color-background;
   height: 85vh;
   @include tablet {
-    padding: 34.21vh 174px 5.77vh 175px;
+    padding: 350px 174px 59px 175px;
     justify-content: flex-start;
-    height: 94.5vh;
-    min-height: 800px;
+    height: 963px;
   }
-
+  @media screen and (min-width: 1200px) {
+    padding: 200px 174px 59px 175px;
+    height: 690px;
+  }
   &__logo {
     width: 250px;
     height: 63px;
@@ -23,7 +23,7 @@
     @include tablet {
       width: 419px;
       height: 105px;
-      margin-bottom: 3.03vh;
+      margin-bottom: 31px;
     }
   }
   &__title {
@@ -42,7 +42,8 @@
     @include tablet {
       font-size: 1rem;
       width: 331px;
-      margin-bottom: 2.64vh;
+      /*margin-bottom: 2.64vh;*/
+      margin-bottom: 27px;
     }
   }
   &__box {
@@ -99,7 +100,11 @@
       }
     }
     @include tablet {
-      margin-top: 17.48vh;
+      /*margin-top: 17.48vh;*/
+      margin-top: 186px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-top: 50px;
     }
   }
 }
