--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,10 +8,9 @@
   background-color: $color-light;
   border-top: solid 1px $color-borderFooter;
   padding: 18px 0 20px;
-  z-index: 1;
   @include tablet {
     height: 60px;
-    min-height: 40px;
+    /*min-height: 40px;*/
     flex-direction: row;
     justify-content: space-between;
     padding: 0.98vh 40px 0.98vh 41px;
