Add new design to design branch

--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -14,7 +14,7 @@
       </div>
       <img
         class="container__img"
-        src="./assets/images/lady.jpg"
+        src="https://decider.com/wp-content/uploads/2015/05/peggy-survivor-lead.png?w=1156&h=862&crop=1"
         alt=""
         title=""
       />
