--- a/src/html/partials/headerCard.html
+++ b/src/html/partials/headerCard.html
@@ -2,9 +2,9 @@
   <a href="./index.html">
     <img
       class="header__img"
-      src="./assets/images/logo-awesome-profile-cards.svg"
+      src="./assets/images/MadWomenLogo_2.svg"
       title="Go to home page"
-      alt="Awesome cards logo"
+      alt="Mad Women"
     />
   </a>
 </header>
