--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <small class="footer__small"> Awesome profile-cards @2018 </small>
+  <small class="footer__small"> Mad Women profile cards </small>
   <a
     class="footer__link"
     title="Ir a la página de Adalab"
