--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,9 +4,9 @@ $font-landing: "Merriweather", serif;
 $font-card: "Montserrat", sans-serif;
 
 // colors
-$color-icon: #e17334;
+$color-icon: #cc1517;
 $color-main: #114e4e;
-$color-button: #438792;
+$color-button: #304668;
 $color-fontMain: #54585a;
 $color-light: #ffffff;
 $color-background: #f5f5f5;
