--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -39,7 +39,7 @@
   &__input {
     width: 100%;
     height: 30px;
-    border: solid 1px $color-icon;
+    border: solid 1px $color-button;
     font-size: 0.875rem;
     padding: 3px 0 7px 9px;
   }
