Fix form adjustments/mixins

--- a/src/scss/layout/form/_design.scss
+++ b/src/scss/layout/form/_design.scss
@@ -35,6 +35,8 @@
       font-size: 0.87rem;
       font-weight: normal;
       text-transform: uppercase;
+      font-family: $font-main;
+      color: $color-fontMain;
       margin: 22px 0 0 19px;
     }
 
