--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -9,8 +9,9 @@
   border-top: solid 1px $color-borderFooter;
   padding: 18px 0 20px;
   @include tablet {
-    height: 60px;
-    /*min-height: 40px;*/
+    height: 5.5vh;
+    /*max-height: 60px;*/
+    min-height: 40px;
     flex-direction: row;
     justify-content: space-between;
     padding: 0.98vh 40px 0.98vh 41px;
