Add scroll bar for the formCard part

--- a/src/scss/layout/_formCard.scss
+++ b/src/scss/layout/_formCard.scss
@@ -6,6 +6,9 @@
   padding: 27px 20px 31px 20px;
   @include tablet {
     width: 329px;
+    float: left;
+    overflow-y: auto;
+    height: 100vh;
   }
 }
 .collapsable__close {
