--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -5,10 +5,10 @@
     </div>
     <div class="generator__article--container">
       <div class="container__nameprofession">
-        <h2 class="container__nameprofession--name js-generatorName">
+        <h2 class="container__nameprofession--name js-card-name">
           Nombre apellido
         </h2>
-        <h3 class="container__nameprofession--profession js-generatorJob">
+        <h3 class="container__nameprofession--profession js-card-job">
           Profesión
         </h3>
       </div>
@@ -21,18 +21,24 @@
       <nav class="container__nav">
         <ul class="menu">
           <li class="menu__item">
+          <a class="js-card-phone" href="">
             <i class="menu__item--icon fas fa-mobile-alt"></i>
+          </a>
           </li>
           <li class="menu__item">
-            <a class="js-generatorEmail" href=""
+            <a class="js-card-email" href=""
               ><i class="menu__item--icon far fa-envelope"></i
             ></a>
           </li>
           <li class="menu__item">
-            <i class="menu__item--icon fab fa-linkedin-in"></i>
+            <a class="js-card-linkedin" href="">
+            <i class="menu__item--icon fab fa-linkedin-in"></i> </a>
+        
           </li>
           <li class="menu__item">
+            <a class="js-card-github" href="">
             <i class="menu__item--icon fab fa-github-alt"></i>
+          </a>
           </li>
         </ul>
       </nav>
