--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -10,7 +10,7 @@
 
   <label class="fill__label name" for="Name">Nombre Completo</label>
   <input
-    class="fill__input js-input-name"
+    class="fill__input js-input-name js-input-text"
     placeholder="Ej: Sally Jill"
     type="text"
     id="name"
@@ -19,7 +19,7 @@
   />
   <label class="fill__label" for="job">Puesto</label>
   <input
-    class="fill__input job js-input-job"
+    class="fill__input job js-input-job js-input-text"
     placeholder="Ej: Front-end unicorn"
     type="text"
     id="job"
@@ -34,7 +34,7 @@
   </div>
   <label class="fill__label" for="email">Email</label>
   <input
-    class="fill__input js-input-email"
+    class="fill__input js-input-email js-input-text"
     placeholder="Ej: sally-hill@gmail.com"
     type="email"
     id="email"
@@ -44,7 +44,7 @@
   />
   <label class="fill__label" for="phone">Teléfono</label>
   <input
-    class="fill__input js-input-phone"
+    class="fill__input js-input-phone js-input-text"
     placeholder="Ej:+34 666666666"
     type="tel"
     id="phone"
@@ -55,7 +55,7 @@
   />
   <label class="fill__label" for="linkedin">Linkedin</label>
   <input
-    class="fill__input js-input-linkedin"
+    class="fill__input js-input-linkedin js-input-text"
     placeholder="Ej: linkedin.com/in/sally.hill"
     type="url"
     id="linkedin"
@@ -63,7 +63,7 @@
   />
   <label class="fill__label" for="github">Github</label>
   <input
-    class="fill__input js-input-github"
+    class="fill__input js-input-github js-input-text"
     placeholder="Ej: @sally-hill"
     type="url"
     id="github"
