Add part of JavaScript for arrows

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -1,8 +1,8 @@
 <!-- fill section-->
-<fieldset class="fill">
+<fieldset class="fill js-container">
   <include
     src="./titles.html"
-    classTitle="fill__title"
+    classTitle="fill__title js-title"
     classTitleContainer="fill__title--container"
     classIcon="far fa-keyboard icon"
     section="Rellena"
