--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -1,8 +1,8 @@
 <!--Secction share-->
-<fieldset class="share">
+<fieldset class="share js-container">
   <include
     src="./titles.html"
-    classTitle="share__title"
+    classTitle="share__title js-title"
     classTitleContainer="share__title--container"
     classIcon="icon fas fa-share-alt"
     section="Comparte"
