Add js palette attempts

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -12,7 +12,12 @@
     <h3 class="design__palette--colors">Colores</h3>
     <div>
       <label class="design__palette--input" for="">
-        <input class="design__palette1" type="radio" name="palette" checked />
+        <input
+          class="design__palette1 js-palette"
+          type="radio"
+          name="palette"
+          checked
+        />
         <ul class="design__palette--list design__palette1">
           <li class="design__palette1--color1">colorA</li>
           <li class="design__palette1--color2">colorB</li>
@@ -20,7 +25,7 @@
         </ul>
       </label>
       <label class="design__palette--input" for="">
-        <input type="radio" name="palette" />
+        <input class="js-palette" type="radio" name="palette" />
         <ul class="design__palette--list">
           <li class="design__palette2--color1">colorA</li>
           <li class="design__palette2--color2">colorB</li>
@@ -28,7 +33,7 @@
         </ul>
       </label>
       <label class="design__palette--input" for="">
-        <input type="radio" name="palette" />
+        <input class="js-palette" type="radio" name="palette" />
         <ul class="design__palette--list">
           <li class="design__palette3--color1">colorA</li>
           <li class="design__palette3--color2">colorB</li>
