--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,5 +1,5 @@
 <section class="generator">
-  <article class="generator__article">
+  <article class="generator__article js-card">
     <div class="generator__article--button1">
       <i class="far fa-trash-alt"></i>Reset
     </div>
@@ -21,9 +21,9 @@
       <nav class="container__nav">
         <ul class="menu">
           <li class="menu__item">
-          <a class="js-card-phone" href="">
-            <i class="menu__item--icon fas fa-mobile-alt"></i>
-          </a>
+            <a class="js-card-phone" href="">
+              <i class="menu__item--icon fas fa-mobile-alt"></i>
+            </a>
           </li>
           <li class="menu__item">
             <a class="js-card-email" href=""
@@ -32,13 +32,13 @@
           </li>
           <li class="menu__item">
             <a class="js-card-linkedin" href="">
-            <i class="menu__item--icon fab fa-linkedin-in"></i> </a>
-        
+              <i class="menu__item--icon fab fa-linkedin-in"></i>
+            </a>
           </li>
           <li class="menu__item">
             <a class="js-card-github" href="">
-            <i class="menu__item--icon fab fa-github-alt"></i>
-          </a>
+              <i class="menu__item--icon fab fa-github-alt"></i>
+            </a>
           </li>
         </ul>
       </nav>
