--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -20,6 +20,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
   @content;
 }
 @mixin legendWord {
