Add cardgenerator name and boder style

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -16,6 +16,7 @@
           class="design__palette1 js-palette"
           type="radio"
           name="palette"
+          value="1"
           checked
         />
         <ul class="design__palette--list design__palette1">
@@ -25,7 +26,7 @@
         </ul>
       </label>
       <label class="design__palette--input" for="">
-        <input class="js-palette" type="radio" name="palette" />
+        <input class="js-palette" type="radio" name="palette" value="2" />
         <ul class="design__palette--list">
           <li class="design__palette2--color1">colorA</li>
           <li class="design__palette2--color2">colorB</li>
@@ -33,7 +34,7 @@
         </ul>
       </label>
       <label class="design__palette--input" for="">
-        <input class="js-palette" type="radio" name="palette" />
+        <input class="js-palette" type="radio" name="palette" value="3" />
         <ul class="design__palette--list">
           <li class="design__palette3--color1">colorA</li>
           <li class="design__palette3--color2">colorB</li>
