--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,9 +1,9 @@
 <section class="generator">
-  <article class="generator__article js-card">
+  <article class="generator__article">
     <div class="generator__article--button1">
       <i class="far fa-trash-alt"></i>Reset
     </div>
-    <div class="generator__article--container">
+    <div class="generator__article--container js-card">
       <div class="container__nameprofession">
         <h2 class="container__nameprofession--name js-card-name">
           Nombre apellido
