Add target blank for linkedin and github

--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -31,12 +31,12 @@
             ></a>
           </li>
           <li class="menu__item">
-            <a class="js-card-linkedin" href="">
+            <a class="js-card-linkedin" href="" target="_blank">
               <i class="menu__item--icon fab fa-linkedin-in"></i>
             </a>
           </li>
           <li class="menu__item">
-            <a class="js-card-github" href="">
+            <a class="js-card-github" href="" target="_blank">
               <i class="menu__item--icon fab fa-github-alt"></i>
             </a>
           </li>
