Add changes for colapsable part.

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -8,6 +8,7 @@
     section="Rellena"
   ></include>
 
+  <!-- <div class=" fill__box "> -->
   <label class="fill__label name" for="Name">Nombre Completo</label>
   <input
     class="fill__input js-input-name js-input-text"
@@ -69,4 +70,5 @@
     id="github"
     name="github"
   />
+<!-- </div> -->
 </fieldset>
