--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -13,7 +13,7 @@
     Crear tarjeta
   </button>
   <div class="border"></div>
-  <div class="share__subsection">
+  <div class="share__subsection collapsable__content">
     <h3 class="share__subsection--title">La tarjeta ha sido creada:</h3>
     <a class="share__subsection--link" href="" target="_blank"
       >link awesome profile card</a
