--- a/src/scss/layout/form/_share.scss
+++ b/src/scss/layout/form/_share.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: solid 1px $color-borderFooter;
+  // border-bottom: solid 1px $color-borderFooter;
   &__title {
     @include legendTitle {
       padding-top: 10px;
