Add collapsable for the fill and share parts, but need correction.

--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -8,18 +8,22 @@
     section="Comparte"
   ></include>
 
-  <button class="share__button" type="submit" title="Create card">
-    <i class="share__button--icon far fa-address-card"></i>
-    Crear tarjeta
-  </button>
   <div class="border"></div>
-  <div class="share__subsection collapsable__content">
-    <h3 class="share__subsection--title">La tarjeta ha sido creada:</h3>
-    <a class="share__subsection--link" href="" target="_blank"
-      >link awesome profile card</a
-    >
-    <a class="share__subsection--twitter" href="" target="_blank"
-      ><i class="icon fab fa-twitter"></i>Compartir en twitter</a
-    >
+
+  <div class="share__box collapsable__content">
+    <button class="share__box--button" type="submit" title="Create card">
+      <i class="share__box--button--icon far fa-address-card"></i>
+      Crear tarjeta
+    </button>
+    <div class="border"></div>
+    <div class="share__box--subsection">
+      <h3 class="share__box--subsection--title">La tarjeta ha sido creada:</h3>
+      <a class="share__box--subsection--link" href="" target="_blank"
+        >link awesome profile card</a
+      >
+      <a class="share__box--subsection--twitter" href="" target="_blank"
+        ><i class="icon fab fa-twitter"></i>Compartir en twitter</a
+      >
+    </div>
   </div>
 </fieldset>
