--- a/src/scss/layout/form/_share.scss
+++ b/src/scss/layout/form/_share.scss
@@ -2,10 +2,6 @@
   font-family: $font-main;
   width: 100%;
   border: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  // border-bottom: solid 1px $color-borderFooter;
   &__title {
     @include legendTitle {
       padding-top: 10px;
@@ -27,52 +23,57 @@
   .arrow {
     @include legendArrow;
   }
-  &__button {
-    text-transform: uppercase;
-    width: 199px;
-    height: 50px;
-    @include t($font-main, 1.125rem, $color-light);
-    background-color: $colorInactive;
-    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
-    border: none;
-    border-radius: 12px;
-    margin-top: 30px;
-    @include tablet {
-      margin-top: 33px;
-    }
-    &--icon {
-      padding-right: 9px;
-    }
-  }
   .border {
     border-bottom: solid 1px $color-borderFooter;
     margin: 30px 0 20px;
     width: 100%;
   }
-  &__subsection {
+  &__box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 0 30px;
-    &--title {
-      @include t($font-main, 1.125rem, $color-fontMain);
-      margin-bottom: 5px;
+    &--button {
+      text-transform: uppercase;
+      width: 199px;
+      height: 50px;
+      @include t($font-main, 1.125rem, $color-light);
+      background-color: $colorInactive;
+      box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
+      border: none;
+      border-radius: 12px;
+      margin-top: 30px;
+      @include tablet {
+        margin-top: 33px;
+      }
+      &--icon {
+        padding-right: 9px;
+      }
     }
-    &--link {
-      @include t($font-main, 0.75rem, $color-icon);
-      margin-bottom: 13px;
-    }
-    &--twitter {
-      background-color: #00a0f5;
-      @include t($font-main, 0.875rem, $color-light);
-      width: 181px;
-      height: 30px;
-      border-radius: 3px;
-      box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
-      text-align: center;
-      padding-top: 3px;
-      .icon {
-        padding-right: 9.5px;
+    &--subsection {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px 0 30px;
+      &--title {
+        @include t($font-main, 1.125rem, $color-fontMain);
+        margin-bottom: 5px;
+      }
+      &--link {
+        @include t($font-main, 0.75rem, $color-icon);
+        margin-bottom: 13px;
+      }
+      &--twitter {
+        background-color: #00a0f5;
+        @include t($font-main, 0.875rem, $color-light);
+        width: 181px;
+        height: 30px;
+        border-radius: 3px;
+        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
+        text-align: center;
+        padding-top: 3px;
+        .icon {
+          padding-right: 9.5px;
+        }
       }
     }
   }
