--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -8,67 +8,67 @@
     section="Rellena"
   ></include>
 
-  <!-- <div class=" fill__box "> -->
-  <label class="fill__label name" for="Name">Nombre Completo</label>
-  <input
-    class="fill__input js-input-name js-input-text"
-    placeholder="Ej: Sally Jill"
-    type="text"
-    id="name"
-    name="name"
-    required
-  />
-  <label class="fill__label" for="job">Puesto</label>
-  <input
-    class="fill__input job js-input-job js-input-text"
-    placeholder="Ej: Front-end unicorn"
-    type="text"
-    id="job"
-    name="job"
-    required
-  />
-  <label class="fill__label imgLabel" for="photo"> Imagen de perfil</label>
-  <div class="addImage">
-    <button class="fill__input buttonImg" type="button">Añadir imagen</button>
-    <input class="buttonInput" type="file" id="photo" name="photo" required />
-    <div class="preview"></div>
-  </div>
-  <label class="fill__label" for="email">Email</label>
-  <input
-    class="fill__input js-input-email js-input-text"
-    placeholder="Ej: sally-hill@gmail.com"
-    type="email"
-    id="email"
-    name="email"
-    pattern=" ^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
-    required
-  />
-  <label class="fill__label" for="phone">Teléfono</label>
-  <input
-    class="fill__input js-input-phone js-input-text"
-    placeholder="Ej:+34 666666666"
-    type="tel"
-    id="phone"
-    name="phone"
-    pattern="^\+(?:[0-9]●?){6,14}[0-9]$
-     "
-    required
-  />
-  <label class="fill__label" for="linkedin">Linkedin</label>
-  <input
-    class="fill__input js-input-linkedin js-input-text"
-    placeholder="Ej: linkedin.com/in/sally.hill"
-    type="url"
-    id="linkedin"
-    name="linkedin"
-  />
-  <label class="fill__label" for="github">Github</label>
-  <input
-    class="fill__input js-input-github js-input-text"
-    placeholder="Ej: @sally-hill"
-    type="url"
-    id="github"
-    name="github"
-  />
-<!-- </div> -->
+  <div class="fill__box collapsable__content">
+    <label class="fill__box--label name" for="Name">Nombre Completo</label>
+    <input
+      class="fill__input js-input-name js-input-text"
+      placeholder="Ej: Sally Jill"
+      type="text"
+      id="name"
+      name="name"
+      required
+    />
+    <label class="fill__box--label" for="job">Puesto</label>
+    <input
+      class="fill__input job js-input-job js-input-text"
+      placeholder="Ej: Front-end unicorn"
+      type="text"
+      id="job"
+      name="job"
+      required
+    />
+    <label class="fill__box--label imgLabel" for="photo"> Imagen de perfil</label>
+    <div class="addImage">
+      <button class="fill__input buttonImg" type="button">Añadir imagen</button>
+      <input class="buttonInput" type="file" id="photo" name="photo" required />
+      <div class="preview"></div>
+    </div>
+    <label class="fill__box--label" for="email">Email</label>
+    <input
+      class="fill__input js-input-email js-input-text"
+      placeholder="Ej: sally-hill@gmail.com"
+      type="email"
+      id="email"
+      name="email"
+      pattern=" ^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
+      required
+    />
+    <label class="fill__box--label" for="phone">Teléfono</label>
+    <input
+      class="fill__input js-input-phone js-input-text"
+      placeholder="Ej:+34 666666666"
+      type="tel"
+      id="phone"
+      name="phone"
+      pattern="^\+(?:[0-9]●?){6,14}[0-9]$
+      "
+      required
+    />
+    <label class="fill__box--label" for="linkedin">Linkedin</label>
+    <input
+      class="fill__input js-input-linkedin js-input-text"
+      placeholder="Ej: linkedin.com/in/sally.hill"
+      type="url"
+      id="linkedin"
+      name="linkedin"
+    />
+    <label class="fill__box--label" for="github">Github</label>
+    <input
+      class="fill__input js-input-github js-input-text"
+      placeholder="Ej: @sally-hill"
+      type="url"
+      id="github"
+      name="github"
+    />
+</div>
 </fieldset>
