--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -11,7 +11,7 @@
   <div class="fill__box collapsable__content">
     <label class="fill__box--label name" for="Name">Nombre Completo</label>
     <input
-      class="fill__input js-input-name js-input-text"
+      class="fill__box--input js-input-name js-input-text"
       placeholder="Ej: Sally Jill"
       type="text"
       id="name"
@@ -20,7 +20,7 @@
     />
     <label class="fill__box--label" for="job">Puesto</label>
     <input
-      class="fill__input job js-input-job js-input-text"
+      class="fill__box--input job js-input-job js-input-text"
       placeholder="Ej: Front-end unicorn"
       type="text"
       id="job"
@@ -29,13 +29,13 @@
     />
     <label class="fill__box--label imgLabel" for="photo"> Imagen de perfil</label>
     <div class="addImage">
-      <button class="fill__input buttonImg" type="button">Añadir imagen</button>
+      <button class="fill__box--input buttonImg" type="button">Añadir imagen</button>
       <input class="buttonInput" type="file" id="photo" name="photo" required />
       <div class="preview"></div>
     </div>
     <label class="fill__box--label" for="email">Email</label>
     <input
-      class="fill__input js-input-email js-input-text"
+      class="fill__box--input js-input-email js-input-text"
       placeholder="Ej: sally-hill@gmail.com"
       type="email"
       id="email"
@@ -45,7 +45,7 @@
     />
     <label class="fill__box--label" for="phone">Teléfono</label>
     <input
-      class="fill__input js-input-phone js-input-text"
+      class="fill__box--input js-input-phone js-input-text"
       placeholder="Ej:+34 666666666"
       type="tel"
       id="phone"
@@ -56,7 +56,7 @@
     />
     <label class="fill__box--label" for="linkedin">Linkedin</label>
     <input
-      class="fill__input js-input-linkedin js-input-text"
+      class="fill__box--input js-input-linkedin js-input-text"
       placeholder="Ej: linkedin.com/in/sally.hill"
       type="url"
       id="linkedin"
@@ -64,7 +64,7 @@
     />
     <label class="fill__box--label" for="github">Github</label>
     <input
-      class="fill__input js-input-github js-input-text"
+      class="fill__box--input js-input-github js-input-text"
       placeholder="Ej: @sally-hill"
       type="url"
       id="github"
