--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -8,22 +8,22 @@
     section="Comparte"
   ></include>
 
-  <div class="border"></div>
+  <!-- <div class="border"></div> -->
 
   <div class="share__box collapsable__content">
     <button class="share__box--button" type="submit" title="Create card">
-      <i class="share__box--button--icon far fa-address-card"></i>
+      <i class="iconCard far fa-address-card"></i>
       Crear tarjeta
     </button>
-    <div class="border"></div>
-    <div class="share__box--subsection">
-      <h3 class="share__box--subsection--title">La tarjeta ha sido creada:</h3>
-      <a class="share__box--subsection--link" href="" target="_blank"
+    <!-- <div class="border"></div> -->
+    <!-- <div class="share__box--subsection">
+      <h3 class="titleCard">La tarjeta ha sido creada:</h3>
+      <a class="linkCard" href="" target="_blank"
         >link awesome profile card</a
       >
-      <a class="share__box--subsection--twitter" href="" target="_blank"
+      <a class="twitterLink" href="" target="_blank"
         ><i class="icon fab fa-twitter"></i>Compartir en twitter</a
-      >
+      > -->
     </div>
   </div>
 </fieldset>
