--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -49,13 +49,13 @@
       color: $color-main;
       padding: 20px 0 7px 0;
     }
-  }
-  &__input {
-    width: 100%;
-    height: 30px;
-    border: solid 1px $color-button;
-    font-size: 0.875rem;
-    padding: 3px 0 7px 9px;
+    &--input {
+      width: 100%;
+      height: 30px;
+      border: solid 1px $color-button;
+      font-size: 0.875rem;
+      padding: 3px 0 7px 9px;
+    }
   }
 
   .name {
