add changes to photo

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -29,9 +29,9 @@
     />
     <label class="fill__box--label imgLabel" for="photo"> Imagen de perfil</label>
     <div class="addImage">
-      <button class="fill__box--input buttonImg" type="button">Añadir imagen</button>
-      <input class="buttonInput" type="file" id="photo" name="photo" required />
-      <div class="preview"></div>
+      <button class="js__profile-trigger fill__box--input buttonImg" type="button">Añadir imagen</button>
+      <input class="js__profile-upload-btn buttonInput" type="file" id="photo" name="photo" required />
+      <div class="js__profile-preview preview"></div>
     </div>
     <label class="fill__box--label" for="email">Email</label>
     <input
