--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -12,12 +12,9 @@
           Profesión
         </h3>
       </div>
-      <img
-        class="container__img"
-        src="https://decider.com/wp-content/uploads/2015/05/peggy-survivor-lead.png?w=1156&h=862&crop=1"
-        alt=""
-        title=""
-      />
+      <div
+        class="js__profile-image container__img">
+      </div>
       <nav class="container__nav">
         <ul class="menu">
           <li class="menu__item">
