--- a/src/scss/layout/_generatorCard.scss
+++ b/src/scss/layout/_generatorCard.scss
@@ -53,6 +53,9 @@
       .container__img {
         width: 240px;
         height: 200px;
+        background-image: url("https://decider.com/wp-content/uploads/2015/05/peggy-survivor-lead.png?w=1156&h=862&crop=1");
+        background-size: cover;
+        background-position: center;
       }
       .container__nav {
         padding: 10px 62px 12px 20px;
