Add js partials and js code to save in localStorage

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -50,8 +50,8 @@
       type="tel"
       id="phone"
       name="phone"
-      pattern="^\+(?:[0-9]●?){6,14}[0-9]$
-      "
+      pattern="^[0-9]{9}$"
+      
       required
     />
     <label class="fill__box--label" for="linkedin">Linkedin</label>
