--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -11,10 +11,11 @@
   <!-- <div class="border"></div> -->
 
   <div class="share__box collapsable__content">
-    <button class="share__box--button" type="submit" title="Create card">
+    <button class="share__box--button js-card-result" type="submit" title="Create card">
       <i class="iconCard far fa-address-card"></i>
       Crear tarjeta
     </button>
+    <div class="js-card-result"></div>
     <!-- <div class="border"></div> -->
     <!-- <div class="share__box--subsection">
       <h3 class="titleCard">La tarjeta ha sido creada:</h3>
