--- a/src/html/partials/formCard.html
+++ b/src/html/partials/formCard.html
@@ -1,4 +1,4 @@
-<form class="form" action="create card" method="GET">
+<form class="form js-submit" action="create card" method="GET">
   <include src="./form/design.html"> </include>
   <include src="./form/fill.html"> </include>
   <include src="./form/share.html"> </include>
